# landscape-task-handler-operator

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  charmcraft.yaml  pyproject.toml  tox.ini
src/: charm.py  landscape_task_handler.py
tests/integration/: conftest.py  test_charm.py
tests/unit/: test_charm.py
